# solucionHerenciaFigurasGeometricas

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
lib/googleTest/googlemock/test/: gmock_output_test.py
lib/googleTest/googletest/test/: googletest-env-var-test.py  googletest-failfast-unittest.py  googletest-global-environment-unittest.py  googletest-json-outfiles-test.py  googletest-output-test.py  googletest-throw-on-failure-test.py  gtest_help_test.py  gtest_list_output_unittest.py  gtest_xml_outfiles_test.py  gtest_xml_test_utils.py
src/: CMakeLists.txt  Main.cpp
src/Model/: Circulo.cpp  Circulo.h  Cuadrado.cpp  Cuadrado.h  FiguraGeometrica.cpp  FiguraGeometrica.h  Programa.cpp  Programa.h  Rectangulo.cpp  Rectangulo.h  Rombo.cpp  Rombo.h
src/View/: View.cpp  View.h
testing/: CMakeLists.txt  CuadradoTest.cpp  ViewTest.cpp
